# vbox-service-restarter-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: pipeline.yml
src/: constants.rs  main.rs  service.rs
