[package]
name = "vbox-service-restarter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
reqwest = "0.11.23"
scraper = { version = "0.18.1", default-features = false }
tokio = { version = "1.35.1", features = ["full"] }



[profile.min]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "s"
strip = true

