[package]
name = "vbox-service-restarter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["tokio-native-tls"], default-features = false}
scraper = { version = "0.18.1", default-features = false }
simple_logger = { version = "4.3.3", default-features = false, features = ["timestamps"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time"], default-features = false}



[profile.min]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

